--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>MAZE SHIFT by max-weller</title>
+    <title>MAZE SHIFT by max-weller and MoritzWillig</title>
   </head>
 
   <body>
@@ -30,6 +30,9 @@
         <section id="main-content">
           <h3>
 <a name="download" class="anchor" href="#download"><span class="octicon octicon-link"></span></a>Download</h3>
+
+          <p>See the download buttons in the sidebar to the right. To run it, follow the simple instructions below.</p>
+
 
 <h3>
 <a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h3>
@@ -48,13 +51,13 @@ Run with "love mazeShift.love" or by doubleclicking mazeshift.love</p>
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/max-weller/labyrinth/zipball/master" class="button">
+          <a href="./mazeshift-src-and-release-1.1.zip" class="button">
             <small>Download</small>
-            .zip file
+            Source and Release
           </a>
-          <a href="https://github.com/max-weller/labyrinth/tarball/master" class="button">
+          <a href="./mazeshift.zip" class="button">
             <small>Download</small>
-            .tar.gz file
+            Executable for Mac OS X, Windows, Linux
           </a>
 
           <p class="repo-owner"><a href="https://github.com/max-weller/labyrinth"></a> is maintained by <a href="https://github.com/max-weller">max-weller</a>.</p>
