--- a/index.html
+++ b/index.html
@@ -29,25 +29,63 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a name="download" class="anchor" href="#download"><span class="octicon octicon-link"></span></a>Download</h3>
+            <a name="download" class="anchor" href="#download"><span class="octicon octicon-link"></span></a>Download</h3>
 
-          <p>See the download buttons in the sidebar to the right. To run it, follow the simple instructions below.</p>
+          <p>See the download buttons in the sidebar to the right. To run it, follow the simple <a href="#installation">instructions</a> below.</p>
 
 
-<h3>
-<a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h3>
+          <h3>
+            <a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h3>
 
-<h3>
-<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
+          <p><img src="screenshots/screen1.png" class="screensh"></p>
 
-<p>Windows:</p>
+          <p><img src="screenshots/screen2.png" class="screensh"></p>
 
-<p>Doubleclick the exe file</p>
+          <p><img src="screenshots/screen3.png" class="screensh"></p>
 
-<p>Linux &amp; Mac:</p>
+          <p><img src="screenshots/screen4.png" class="screensh"></p>
 
-<p>Download and install Löve2D according to the instructions under <a href="https://www.love2d.org/">https://www.love2d.org/</a>.
-Run with "love mazeShift.love" or by doubleclicking mazeshift.love</p>
+          <p><img src="screenshots/screen5.png" class="screensh"></p>
+
+
+          <h3>
+            <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
+
+          <p>Windows:</p>
+
+          <p>Doubleclick <i>release/makeshift.exe</i> to run the game.</p>
+
+          <p>Linux &amp; Mac:</p>
+
+          <p>Download and install Löve2D according to the instructions under <a href="https://www.love2d.org/">https://www.love2d.org/</a>.
+            
+            Run the command below to unzip and run the game from your Downloads folder. You could also try doubleclicking <i>mazeshift.love</i>.</p>
+
+          <pre>unzip mazeshift.zip<br>cd mazeshift<br>love makeshift.love</pre>
+
+
+          <h3>
+            <a name="credits" class="anchor" href="#credits"><span class="octicon octicon-link"></span></a>Credits</h3>
+
+
+          <pre>
+Game Design & Levels:
+Moritz Willig                   www.rise-of-light.de
+Max Weller                      www.max-weller.de
+
+Background Music:
+IncompeTech                     www.incompetech.com
+
+Sound Effects:
+Classical 8-Bit Game Sounds     connersaw8
+
+Font:
+The Ultimate Apple II Font      www.kreativekorp.com
+
+Background Images:
+Subtle Patterns                 www.subtlepatterns.com
+</pre>
+          
         </section>
 
         <aside id="sidebar">
