--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@ Subtle Patterns                 www.subtlepatterns.com
         </section>
 
         <aside id="sidebar">
-          <a href="./mazeshift-src-and-release-1.1.zip" class="button">
-            <small>Download</small>
-            Source and Release
-          </a>
           <a href="./mazeshift.zip" class="button">
-            <small>Download</small>
-            Executable for Mac OS X, Windows, Linux
+            <small>Executable for Mac OS X, Windows, Linux</small>
+            Download
+          </a>
+          <a href="./mazeshift-src-and-release-1.1.zip" class="button">
+            <small>Source Code</small>
+            Download
           </a>
 
           <p class="repo-owner"><a href="https://github.com/max-weller/labyrinth"></a> is maintained by <a href="https://github.com/max-weller">max-weller</a>.</p>
