--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             <a name="credits" class="anchor" href="#credits"><span class="octicon octicon-link"></span></a>Credits</h3>
 
 
-          <pre>
+<pre>
 Game Design & Levels:
-Moritz Willig                   www.rise-of-light.de
-Max Weller                      www.max-weller.de
+Max Weller                      <a href="http://www.max-weller.de">www.max-weller.de</a>
+Moritz Willig                   <a href="http://www.rise-of-light.de">www.rise-of-light.de</a>
 
 Background Music:
 IncompeTech                     www.incompetech.com
