--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a name="download" class="anchor" href="#download"><span class="octicon octicon-link"></span></a>About</h3>
 
           <p>This game is a contest entry in the <a href="http://globalgamejam.org/2014/games/mazeshift">Global Game Jam 2014</a>. 
-          See the games <a href="http://globalgamejam.org/2014/games/mazeshift">project page</a> for more details. It was created in 48 hours by Max Weller and Morit Willig.</p>
+            See the games <a href="http://globalgamejam.org/2014/games/mazeshift">project page</a> for more details. It was created in 48 hours by <a href="http://www.twitter.com/max_weller">Max</a> <a href="http://www.max-weller.de">Weller</a> and <a href="http://www.rise-of-light.de">Moritz Willig</a>.</p>
           
           
 
